# django-requests-logger

./: MANIFEST.in  README.md  pyproject.toml  setup.py
django_requests_logger/: __init__.py  admin.py  apps.py  callbacks.py  models.py  signals.py
django_requests_logger/migrations/: 0001_initial.py
